# bittorrent

./: .gitignore  Cargo.toml  state.json  test.txt
src/: bitfield.rs  download.rs  foo.rs  handshake.rs  main.rs  message.rs  peer.rs  peers.rs  piece.rs  torrent.rs  worker.rs
