[package]
name = "bittorrent"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
bendy = { version = "^0.3", features = ["std", "serde"] }
bytes = "1.7.1"
crossbeam = "0.8.4"
env_logger = "0.11.5"
hex = "0.4.3"
log = "0.4.22"
num_cpus = "1.16.0"
rand = "0.8.5"
reqwest = "0.12.5"
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2.3"
serde_json = "1.0"
sha1 = "0.10.6"
tokio = { version = "1.39.2", features = ["full"] }
tokio-macros = "=2.4.0"
tokio-stream = "0.1.16"
url = "2.5.2"
urlencoding = "2.1.3"
